[package]
name = "rust-webhook"
version = "1.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4.1"
futures = "0.3"
hmac = "0.12.1"
sha2 = { version = "0.10", default-features = false }
hex = "0.4.3"
anyhow = "1.0"
